--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+uc5100-system (1.3.0) stretch; urgency=medium
+
+  * Refine platform init script
+  * Modify udev rule for probing ds1374_wdt
+  * Adjust cell/wifi service start mechanism
+  * Update dependencies
+
+ -- Ken CJ Chou <KenCJ.Chou@moxa.com>  Wed, 17 Jun 2020 16:43:10 +0800
+
 uc5100-system (1.2.2) stretch; urgency=medium
 
   * fix: update moxa-dio-control to 1.2.0+deb9
